--- a/scss/include/_grid.scss
+++ b/scss/include/_grid.scss
@@ -1,36 +1,14 @@
-@media #{$screen} {
-    .row {
-        @for $i from 1 through $grid-total-columns {
-            .tiny-#{$i},
-            .small-#{$i},
-            .medium-#{$i},
-            .xlarge-#{$i} {
-                display: none
-            }
-        }
-        @for $i from 1 through $grid-total-columns {
-            .large-#{$i} {
-                float: left;
-                position: relative;
-                width: percentage($i/$grid-total-columns);
-                display: block;
-            }
-        }
-        @for $i from 1 through $grid-total-columns {
-            .span-#{$i} {
-                float: left;
-                position: relative;
-                width: percentage($i/$grid-total-columns);
-                display: block;
-            }
-        }
-        @for $i from 1 through $tabstrip-columns {
-            .tabspan-#{$i} {
-                float: left;
-                position: relative;
-                width: percentage($i/$tabstrip-columns);
-                display: block;
-            }
+.row {
+    @for $i from 1 through $grid-total-columns {
+        .span-#{$i},
+        .tiny-#{$i},
+        .small-#{$i},
+        .medium-#{$i},
+        .large-#{$i},
+        .xlarge-#{$i} {
+            display: none;
+            position: relative;
+            float: left;
         }
     }
 }
@@ -38,19 +16,9 @@
 @media #{$large} {
     .row {
         @for $i from 1 through $grid-total-columns {
-            .tiny-#{$i},
-            .small-#{$i},
-            .medium-#{$i},
             .large-#{$i} {
-                display: none
-            }
-        }
-        @for $i from 1 through $grid-total-columns {
-            .xlarge-#{$i} {
-                float: left;
-                position: relative;
-                width: percentage($i/$grid-total-columns);
                 display: block;
+                width: percentage($i/$grid-total-columns);
             }
         }
     }
@@ -59,15 +27,9 @@
 @media #{$medium} {
     .row {
         @for $i from 1 through $grid-total-columns {
-            .large-#{$i} {
-                display: none
-            }
-        }
-        @for $i from 1 through $grid-total-columns {
             .medium-#{$i} {
-                float: left;
-                position: relative;
-                width: percentage($i/$grid-total-columns); display: block;
+                display: block;
+                width: percentage($i/$grid-total-columns);
             }
         }
     }
@@ -76,18 +38,9 @@
 @media #{$small} {
     .row {
         @for $i from 1 through $grid-total-columns {
-            .tiny-#{$i},
-            .medium-#{$i},
-            .large-#{$i},
-            .xlarge-#{$i} {
-                display: none
-            }
-        }
-        @for $i from 1 through $grid-total-columns {
             .small-#{$i} {
-                float: left;
-                position: relative;
-                width: percentage($i/$grid-total-columns); display: block;
+                display: block;
+                width: percentage($i/$grid-total-columns);
             }
         }
     }
@@ -96,18 +49,26 @@
 @media #{$tiny} {
     .row {
         @for $i from 1 through $grid-total-columns {
-            .small-#{$i},
-            .medium-#{$i},
-            .large-#{$i},
-            .xlarge-#{$i} {
-                display: none
+            .tiny-#{$i} {
+                display: block;
+                width: percentage($i/$grid-total-columns);
             }
         }
+    }
+}
+
+@media #{$screen} {
+    .row {
         @for $i from 1 through $grid-total-columns {
-            .tiny-#{$i} {
-                float: left;
-                position: relative;
-                width: percentage($i/$grid-total-columns); display: block;
+            .span-#{$i} {
+                display: block;
+                width: percentage($i/$grid-total-columns);
+            }
+        }
+        @for $i from 1 through $tabstrip-columns {
+            .tabspan-#{$i} {
+                display: block;
+                width: percentage($i/$tabstrip-columns);
             }
         }
     }
